<resources>
    <string name="app_name">SmartHaus</string>
    <string name="tab_text_1">Rooms</string>
    <string name="tab_text_2">Devices</string>
    <string name="tab_text_3">Actions</string>
    <string name="configuracion">Settings</string>
    <string name="item1">Me</string>
    <string name="item2">Family</string>
    <string name="item3">Lovely</string>
    <string name="item4">Team</string>
    <string name="item5">Friends</string>
    <string name="item6">Calendars</string>
    <string name="item7">Calendars</string>
    <string name="item8">Calendars</string>
    <string name="item9">Calendars</string>
    <string name="item10">Calendars</string>
    <string name="item11">Calendars</string>
    <string name="item12">Calendars</string>
    <string name="status">status</string>
    <string name="card_title">%1$s</string>
    <string name="item_text">%1$s</string>
    <string name="Complete_hoover">New Base Charge Location</string>
    <string name="change_location_hoover">Change Hoover Location</string>
    <string name="confirmation_button">Confirm</string>
    <string name="aspirar_trapear_switch">Vacuum/Mop</string>
    <string name="on_off_switch">On/Off</string>
    <string name="open_close_switch">Open/Close</string>
    <string name="set_position">Set Position</string>
    <string name="set_temperature">Set Temperature</string>
    <string name="set_mode">Set Mode</string>
    <string name="set_vertical_direction">Set Vertical Direction</string>
    <string name="set_horizontal_direction">Set Horizontal Direction</string>
    <string name="set_speed">Set Speed</string>
    <string name="lock_switch">Lock/Unlock</string>
    <string name="set_freezer_temperature">Set Freezer Temperature</string>
    <string name="set_fridge_temperature">Set Fridge Temperature</string>
    <string name="device_activity">Device</string>
    <string name="ac_title">Air Conditioner</string>
    <string name="hoover_title">Hoover</string>
    <string name="curtain_title">Curtains</string>
    <string name="door_title">Door</string>
    <string name="fridge_title">Fridge</string>
    <string name="channel_name">channel</string>
    <string name="channel_description">channel description</string>

</resources>